// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary: displays correct Summary when given expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totaling 
    $1,141.95
  </h3>
</div>
`;

exports[`ExpenseSummary: displays nothing when no expenses 1`] = `
<div>
  <h3>
    Viewing 
    0
     
    expenses
     totaling 
    $0.00
  </h3>
</div>
`;
